infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-svc
spec:
  type: NodePort
  selector:
    app: homework
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
