infra/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/health/?$ /health break;
      rewrite ^/otusapp/([A-Za-z]+)/.* /greeting/$1 break;
      return 404;
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          backend:
            serviceName: homework-svc
            servicePort: 8000
